--- a/ecommerce-mern/package.json
+++ b/ecommerce-mern/package.json
@@ -4,14 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon back/server.js"
   },
   "author": "Diego Serafim",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
-    "mongoose": "^6.1.4"
+    "mongoose": "^6.1.4",
+    "nodemon": "^2.0.15"
   },
   "devDependencies": {
     "eslint": "^8.5.0",
