--- a/ecommerce-mern/package.json
+++ b/ecommerce-mern/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "node back/server.js",
     "dev": "nodemon back/server.js"
   },
   "author": "Diego Serafim",
