recuperação de senha de usuario

--- a/ecommerce-mern/back/config/config.env
+++ b/ecommerce-mern/back/config/config.env
@@ -3,3 +3,6 @@ DB_URI = "mongodb://localhost:27017/Ecommerce"
 JWT_SECRET=serafim86
 JWT_EXPIRE=7d
 COOKIE_EXPIRE=7
+SMPT_SERVICE="gmail"
+SMPT_MAIL="email6pp@gmail.com"
+SMPT_PASSWORD="serafim.86"
