--- a/ecommerce-mern/back/config/config.env
+++ b/ecommerce-mern/back/config/config.env
@@ -1,8 +1,19 @@
 PORT=4000
+
 DB_URI = "mongodb://localhost:27017/Ecommerce"
+
 JWT_SECRET=serafim86
-JWT_EXPIRE=7d
-COOKIE_EXPIRE=7
-SMPT_SERVICE="gmail"
-SMPT_MAIL="email6pp@gmail.com"
-SMPT_PASSWORD="serafim.86"
+
+JWT_EXPIRE=5d
+
+COOKIE_EXPIRE=5
+
+SMPT_SERVICE= gmail
+
+SMPT_MAIL= diegoserafim1@gmail.com
+
+SMPT_PASSWORD=serafim86
+
+SMPT_HOST=smtp.gmail.com
+
+SMPT_PORT=465
