--- a/ecommerce-mern/package.json
+++ b/ecommerce-mern/package.json
@@ -20,10 +20,7 @@
     "mongoose": "^6.1.4",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
-    "validator": "^13.7.0"
-  },
-  "devDependencies": {
-    "eslint": "^8.5.0",
-    "eslint-plugin-react": "^7.28.0"
+    "validator": "^13.7.0",
+    "eslint": "^7.11.0"
   }
 }
