--- a/ecommerce-mern/front/package.json
+++ b/ecommerce-mern/front/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -15,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^3.11.0",
+    "react-material-ui-carousel": "^3.2.0",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
@@ -49,5 +51,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://192.168.10.106:4000"
+  "proxy": "http://192.168.43.103:4000"
 }
