--- a/ecommerce-mern/front/package.json
+++ b/ecommerce-mern/front/package.json
@@ -29,7 +29,7 @@
     "webfontloader": "^1.6.28"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --max-http-header-size=1200 start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -52,5 +52,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://192.168.43.154:4000"
+  "proxy": "http://192.168.10.104:4000"
 }
