--- a/ecommerce-mern/back/config/config.env
+++ b/ecommerce-mern/back/config/config.env
@@ -17,3 +17,9 @@ SMPT_PASSWORD=serafim86
 SMPT_HOST=smtp.gmail.com
 
 SMPT_PORT=465
+
+CLOUDINARY_NAME=serafim
+
+CLOUDINARY_API_KEY=978986859332543
+
+CLOUDINARY_API_SECRET=ufrGyU6LScMDqSkjwp6jM9DUyC8
