created page forgot password

--- a/ecommerce-mern/back/config/config.env
+++ b/ecommerce-mern/back/config/config.env
@@ -2,6 +2,8 @@ PORT=4000
 
 DB_URI="mongodb://localhost:27017/Ecommerce"
 
+FRONTEND_URL="http://localhost:3000"
+
 JWT_SECRET=serafim86
 
 JWT_EXPIRE=5d
