--- a/ecommerce-mern/front/package.json
+++ b/ecommerce-mern/front/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
+    "country-state-city": "^3.0.1",
     "eslint": "^7.11.0",
     "overlay-navbar": "^1.1.1",
     "react": "^17.0.2",
