--- a/ecommerce-mern/package.json
+++ b/ecommerce-mern/package.json
@@ -11,6 +11,8 @@
   "author": "Diego Serafim",
   "license": "ISC",
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.9.0",
+    "@stripe/stripe-js": "^1.32.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
     "cloudinary": "^1.30.0",
@@ -23,6 +25,7 @@
     "mongoose": "^6.1.4",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
+    "stripe": "^9.10.0",
     "validator": "^13.7.0"
   }
 }
