--- a/ecommerce-mern/front/package.json
+++ b/ecommerce-mern/front/package.json
@@ -11,18 +11,20 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
+    "chart.js": "^3.8.0",
     "country-state-city": "^3.0.1",
     "eslint": "^7.11.0",
     "overlay-navbar": "^1.1.1",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^3.11.0",
     "react-js-pagination": "^3.0.3",
     "react-material-ui-carousel": "^3.2.0",
-    "react-redux": "^7.2.6",
+    "react-redux": "^7.2.8",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "redux": "^4.1.2",
