--- a/ecommerce-mern/front/package.json
+++ b/ecommerce-mern/front/package.json
@@ -7,6 +7,8 @@
     "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.61",
+    "@stripe/react-stripe-js": "^1.9.0",
+    "@stripe/stripe-js": "^1.32.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -57,5 +59,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://192.168.10.107:4000"
+  "proxy": "http://192.168.10.109:4000"
 }
